# Assignment

./: README.md
ros_ws/: README.md
ros_ws/src/amr_custom_msgs/: CMakeLists.txt  package.xml
ros_ws/src/amr_custom_msgs/srv/: SaveTrajectory.srv
ros_ws/src/amr_trajectory/: CMakeLists.txt  package.xml
ros_ws/src/amr_trajectory/src/: random_mover.cpp  trajectory_publisher_saver.cpp  trajectory_reader_publisher.cpp
